# curso-estatistica-basica

./: README.md  apresentacao.html  apresentacao.qmd  pyproject.toml  references.bib  styles.css
data/: alunos.csv
docs/: apresentacao.html  search.json
